--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-sitemap": "^2.0.6",
     "gatsby-plugin-styled-components": "^3.0.6",
     "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-remark-images": "^3.0.11",
     "gatsby-source-filesystem": "^2.0.21",
     "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.14",
