--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "@kalm42/my-site",
   "private": true,
+  "description": "My client facing site for soliciting web development work.",
   "version": "1.3.0",
   "author": "Kyle Melton <kalm42@gmail.com>",
   "dependencies": {
@@ -50,9 +51,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+    "url": "https://github.com/kalm42/my-site"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/kalm42/my-site/issues"
   }
 }
