--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Kyle Melton <kalm42@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
+    "framer-motion": "^1.4.1",
     "gatsby": "^2.1.11",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-google-analytics": "^2.0.16",
@@ -14,6 +15,7 @@
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-robots-txt": "^1.4.0",
+    "gatsby-plugin-sass": "^2.1.3",
     "gatsby-plugin-sentry": "^1.0.1",
     "gatsby-plugin-sharp": "^2.0.21",
     "gatsby-plugin-sitemap": "^2.0.6",
@@ -23,6 +25,8 @@
     "gatsby-source-filesystem": "^2.0.21",
     "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.14",
+    "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
