--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@kalm42/my-site",
   "private": true,
   "description": "My client facing site for soliciting web development work.",
-  "version": "1.3.1",
+  "version": "2.0.0",
   "author": "Kyle Melton <kalm42@gmail.com>",
   "dependencies": {
     "babel-plugin-styled-components": "^1.10.0",
@@ -12,6 +12,7 @@
     "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-manifest": "^2.0.18",
     "gatsby-plugin-netlify": "^2.0.11",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-robots-txt": "^1.4.0",
@@ -25,11 +26,12 @@
     "gatsby-source-filesystem": "^2.0.21",
     "gatsby-transformer-remark": "^2.2.5",
     "gatsby-transformer-sharp": "^2.1.14",
+    "netlify-cms-app": "^2.9.7",
     "node-sass": "^4.12.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
-    "react": "^16.8.2",
-    "react-dom": "^16.8.2",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "styled-components": "^4.1.3"
   },
