--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,3 +13,12 @@ collections:
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
+  - name: portfolio
+    label: Portfolio
+    folder: portfolio
+    create: true
+    fields:
+      - { name: path, label: Path }
+      - { name: date, label: Date, widget: date }
+      - { name: title, label: Title }
+      - { name: body, label: Body, widget: markdown }
