--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -10,6 +10,7 @@ collections:
     create: true
     fields:
       - { name: path, label: Path }
+      - { name: slug, label: Slug }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
@@ -19,6 +20,7 @@ collections:
     create: true
     fields:
       - { name: path, label: Path }
+      - { name: slug, label: Slug }
       - { name: date, label: Date, widget: date }
       - { name: title, label: Title }
       - { name: body, label: Body, widget: markdown }
